--- a/front/src/app/public/recipe/recipe-detail/recipe-detail.component.html
+++ b/front/src/app/public/recipe/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,8 @@
-<section class="nav-recipe">
-    <mat-icon aria-hidden="true" aria-label="voir d'autres recettes" fontIcon="ramen_dining"
-        routerLink="/recipes"></mat-icon>
+<article class="nav-recipe">
     <button class="button-nav-recipe-detail" (click)="goToOverview()">Aperçu</button>
     <button class="button-nav-recipe-ingredients" (click)="goToIngredient()">Ingredients</button>
     <button class="button-nav-recipe-steps" (click)="goToStep()">Étapes</button>
-</section>
-
+</article>
 <section class="recipe-content">
 
     <article #overviewSection class="aperçu-recipe-section">
