--- a/front/src/app/public/recipe/recipe-list/recipe-list.component.scss
+++ b/front/src/app/public/recipe/recipe-list/recipe-list.component.scss
@@ -1,6 +1,8 @@
 .recipe-content {
     display: flex;
     flex-direction: column;
+    padding-left: 2rem;
+    padding-right: 2rem;
 
     .card-color-green {
         padding:4rem;
