--- a/front/src/app/shared/header/header.component.html
+++ b/front/src/app/shared/header/header.component.html
@@ -1,3 +1,6 @@
-<header>
-    <img src="../../../assets/img/Yumami.png" alt="logo yumami"(click)="goToHomePage()"/>
-</header>
+<section class="header-section">
+        <img src="../../../assets/img/yumami.svg" alt="logo yumami" (click)="goToHomePage()" />
+        <section class="navigation-container">
+            <app-navigation></app-navigation>
+        </section>
+</section>
