--- a/front/src/app/admin/crud/recipe/update-recipe/update-recipe.component.scss
+++ b/front/src/app/admin/crud/recipe/update-recipe/update-recipe.component.scss
@@ -1,24 +1,10 @@
-.nav-dashboard{
-    margin-top: 5rem;
-    height:2rem;
-    padding-bottom: 1rem;
-    position: fixed;
-    top:0;
-    background-color: white;
-    width:100%;
-    display: flex;
-    justify-content: center;
-    gap:1rem;
+.update-recipe-container{
 
-    .button-nav-recipe-create{
-        color: #0D382E;
-        background-color: transparent;
+    h2{
+        display:flex;
+        justify-content: center;
     }
-    .button-nav-dashboard{
-        color: #D7A35B;
-        background-color: transparent;
-    }
-}
+
 .formGroup{
     display: flex;
     flex-direction: column;
@@ -107,4 +93,5 @@
         max-width: 50%;
         padding: 0.8rem;
     }
+}
 }
