--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,2 +1,9 @@
-<app-header></app-header>
+<header>
+    <app-header></app-header>
+</header>
+<main>
 <router-outlet></router-outlet>
+</main>
+<footer class="navigation-container">
+<app-navigation></app-navigation>
+</footer>
