--- a/front/src/app/public/account/register/register.component.scss
+++ b/front/src/app/public/account/register/register.component.scss
@@ -1,10 +1,18 @@
 
 .register-form{
-    min-height: 100vh;
+    min-height: 50%;
     display: flex;
     flex-direction: column;
     background-color:#D7A35B ;
     border-radius: 1rem;
+    a{
+        font-family: Rubik;
+        font-size: 16px;
+        text-transform:lowercase;
+        font-weight: 700;
+        text-decoration:underline;
+        margin-top: 1rem;
+    }
 
     //MOBILE
     @media screen and (min-width:320px){
