--- a/front/src/app/public/home/home.component.scss
+++ b/front/src/app/public/home/home.component.scss
@@ -2,10 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 10rem;
 
-    h2 {
+    h2{
+
         justify-content: center;
-        margin: 2rem;
         text-align: center;
         display: flex;
         margin-bottom: 5rem;
