--- a/front/src/app/shared/header/header.component.scss
+++ b/front/src/app/shared/header/header.component.scss
@@ -1,16 +1,29 @@
-header{
-    position: fixed;
-    top: 0;
-    background-color: #ffffff;
-    width: 100%;
-    max-height: 5rem;
-    display: flex;
-    align-content: center;
+.header-section{
+    // background-color: white;
+    // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    // height: 100px;
+    // width: 100vw;
+    display: flex;  
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+
 
     img{
-        margin:3rem;
+        margin:1rem;
+        max-width: 250px;
     }
 
+
+@media (min-width: 768px){
+    .navigation-container{
+        margin-bottom: 1rem;    
+    }
 }
+@media (max-width: 768px){
+    .navigation-container{
+        display: none;
+    }
+}
+}
+
