--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -34,14 +34,23 @@ $yumami-theme: mat.define-light-theme((
 @include mat.all-component-themes($yumami-theme);
 
 //FONT 
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@font-face {
+    font-family: 'Rubik';
+    src: url(./assets/font/Rubik/Rubik-VariableFont_wght.ttf) format(truetype),
+        url(./assets/font/Rubik/Rubik-Italic-VariableFont_wght.ttf) format(truetype)
+}
+@font-face {
+    font-family: 'Montserrat';
+    src: url(./assets/font/Montserrat/Montserrat-VariableFont_wght.ttf) format(truetype),
+        url(./assets/font/Montserrat/Montserrat-Italic-VariableFont_wght.ttf) format(truetype)
+}
+// @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 h1{
     font-family: 'Rubik';
     font-weight: 900 ;
-    font-size: 24px;
+    font-size: 36px;
     color:rgb(30, 29, 29);
     text-transform: uppercase;
     text-align: center;
@@ -51,12 +60,13 @@ h2{
     font-family: 'Rubik';
     font-weight: 700 ;
     color:#0D382E;
+    font-size: 24px;
 }
 
 h3{
     font-family: 'Montserrat';
     font-weight: 600 ;
-    font-size: 24px;
+    font-size: 20px;
     color:rgb(30, 29, 29);
     text-transform: uppercase;
 }
@@ -64,7 +74,7 @@ h3{
 h4{
     font-family: 'Rubik';
     font-weight: 300 ;
-    font-size: 24px;
+    font-size: 18px;
     color:rgb(30, 29, 29);
     text-transform: uppercase;
 
@@ -73,7 +83,7 @@ h4{
 h5{
     font-family: 'Rubik';
     font-weight: 700 ;
-    font-size: 15px;
+    font-size: 18px;
 
 }
 
@@ -89,14 +99,14 @@ h6{
 p{
     font-family: 'Montserrat';
     font-weight: 500 ;
-    font-size: 15px;
+    font-size:  16px;
     color:rgb(30, 29, 29);
 
 }
 label{
     font-family: 'Montserrat';
     font-weight: 800 ;
-    font-size: 17px;
+    font-size: 18px;
     color:rgb(30, 29, 29);
 }
 option{
@@ -114,10 +124,12 @@ select{
 }
 a{
     font-family: Rubik;
-    font-size: 17px;
+    font-size: 16px;
     text-transform: uppercase;
     font-weight: 700;
-    text-decoration: none
+    text-decoration: none;
+    color: black;
+    
 }
 
 button{
@@ -129,9 +141,10 @@ button{
     border: 0;
 }
 
-html, body { height: 100%; }
+html, body { 
+    min-height: 100%; }
 body { 
-
+    background-color: #faf8f2;
     margin: 1rem; 
     margin-top:6rem;
     font-family: Roboto, "Helvetica Neue", sans-serif; }
