--- a/front/src/app/shared/navigation/navigation.component.html
+++ b/front/src/app/shared/navigation/navigation.component.html
@@ -3,15 +3,19 @@
         <mat-icon (click)="onBack()">arrow_back_ios</mat-icon>
     </article>
     <article class="home">
+        <mat-icon routerLink="/">home</mat-icon>
         <a routerLink="/">Accueil</a>
     </article>
     <article class="dashboard">
+        <mat-icon routerLink="/dashboard">dashboard</mat-icon>
         <a routerLink="/dashboard">Dashboard</a>
     </article>
     <article class="recipes">
+        <mat-icon routerLink="/recipes">restaurant_menu</mat-icon>
         <a routerLink="/recipes">Recettes</a>
     </article>
     <article class="account">
+        <mat-icon routerLink="/account">account_circle</mat-icon>
         <a routerLink="/account">Compte</a>
     </article>
 </section>
