--- a/front/src/app/admin/crud/recipe/update-recipe/update-recipe.component.html
+++ b/front/src/app/admin/crud/recipe/update-recipe/update-recipe.component.html
@@ -33,7 +33,8 @@
     <section class="FormGroup">
         <h3>Ingredients</h3>
             <div formArrayName="ingredients">
-                <div *ngFor="let ingredient of ingredientsFormArray.controls; let i = index ; trackBy : trackByIngredient" [formGroupName]="i">
+                <div *ngFor="let ingredient of ingredientsFormArray.controls; let i = index">
+                    <div [formGroupName]="i">
                         <input type="text" formControlName="name" required/>
                         <input type ="number" formControlName="quantity" required/>
                         <select formControlName="category" required>
@@ -44,10 +45,11 @@
                         </select>
                         <section class="button-add-delete">
                             <button type="button" (click)="addIngredient()" class="button-bonus">+</button>
-                            <button type="button" (click) ="deleteIngredient(i)" class="button-minus">-</button>
+                            <button type="button" (click)="deleteIngredient(i)" class="button-minus">-</button>
                         </section>
                     </div>
                 </div>
+            </div>
     </section>
     <section class="FormGroup">
         <H3>Régime Alimentaire</H3>
@@ -59,7 +61,7 @@
                     </select>
                     <section class="button-add-delete">
                         <button type="button" (click)="addDiet()" class="button-bonus">+</button>
-                        <button type="button" (click) ="deleteDiet(i)" class="button-minus">-</button>
+                        <button type="button" (click)="deleteDiet(i)" class="button-minus">-</button>
                     </section>
  
                 </div>
@@ -75,7 +77,7 @@
                         <input type="text" formControlName="name" required/>
                         <section class="button-add-delete">
                             <button type="button" (click)="addStep()" class="button-bonus">+</button>
-                            <button type="button" (click) ="deleteStep(i)" class="button-minus">-</button>
+                            <button type="button" (click)="deleteStep(i)" class="button-minus">-</button>
                         </section>
                     </div>
                 </div>
