--- a/front/src/app/admin/dashboard/dashboard.component.scss
+++ b/front/src/app/admin/dashboard/dashboard.component.scss
@@ -7,7 +7,7 @@ padding:2rem;
     flex-direction: column;
 
     button{
-        background-color:#D7A35B ;
+        background-color:#faf8f2 ;
         color:#0D382E
     }
     .recipe-detail{
