--- a/front/src/app/public/recipe/recipe-list/recipe-list.component.scss
+++ b/front/src/app/public/recipe/recipe-list/recipe-list.component.scss
@@ -26,4 +26,12 @@
         background-color: #D7A35B;
         border-radius: 5px;
     }
+    .ingredients-section{
+        display:flex;
+        flex-wrap: wrap;
+        p{
+            padding-right:5px;
+        }
+
+    }
 }
