--- a/front/src/app/shared/navigation/navigation.component.html
+++ b/front/src/app/shared/navigation/navigation.component.html
@@ -1,21 +1,18 @@
 <section class="navigation">
     <article class="back">
-        <mat-icon (click)="onBack()">arrow_back_ios</mat-icon>
+        <mat-icon (click)="onBack()"aria-label="retour en arrière" aria-hidden="false">arrow_back_ios</mat-icon>
     </article>
     <article class="home">
-        <mat-icon routerLink="/">home</mat-icon>
+        <mat-icon routerLink="/"aria-label="aller sur accueil" aria-hidden="false">home</mat-icon>
         <a routerLink="/">Accueil</a>
     </article>
-    <article class="dashboard">
-        <mat-icon routerLink="/dashboard">dashboard</mat-icon>
-        <a routerLink="/dashboard">Dashboard</a>
-    </article>
+    
     <article class="recipes">
-        <mat-icon routerLink="/recipes">restaurant_menu</mat-icon>
+        <mat-icon routerLink="/recipes" aria-label="voir les recettes" aria-hidden="false">restaurant_menu</mat-icon>
         <a routerLink="/recipes">Recettes</a>
     </article>
     <article class="account">
-        <mat-icon routerLink="/account">account_circle</mat-icon>
+        <mat-icon routerLink="/account" aria-label="aller sur son compte" aria-hidden="false">account_circle</mat-icon>
         <a routerLink="/account">Compte</a>
     </article>
 </section>
