--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -36,13 +36,14 @@ $yumami-theme: mat.define-light-theme((
 //FONT 
 @font-face {
     font-family: 'Rubik';
-    src: url(./assets/font/Rubik/Rubik-VariableFont_wght.ttf) format(truetype),
-        url(./assets/font/Rubik/Rubik-Italic-VariableFont_wght.ttf) format(truetype)
+    src:url(./assets/font/Rubik/Rubik-VariableFont_wght.ttf) format(truetype),
+        url(./assets/font/Rubik/Rubik-Italic-VariableFont_wght.ttf) format(truetype);
+    font-display: swap;
 }
 @font-face {
     font-family: 'Montserrat';
     src: url(./assets/font/Montserrat/Montserrat-VariableFont_wght.ttf) format(truetype),
-        url(./assets/font/Montserrat/Montserrat-Italic-VariableFont_wght.ttf) format(truetype)
+        url(./assets/font/Montserrat/Montserrat-Italic-VariableFont_wght.ttf) format(truetype);
 }
 // @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
