--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -1,14 +1,19 @@
+@import '../assets/mixin/mixins.scss';
+
 header{
     background-color: white;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    height: 120px;
+    height: 70px;
     width: 100vw;
     z-index:1000;
     position: fixed;
     top:0;
     left: 0;
-    @media screen and (max-width: 700px) {
-        height:90px;
+    @include tablet {
+        height: 100px
+    }
+    @include desktop {
+        height: 120px
     }
 }
 main{
@@ -19,7 +24,6 @@ main{
     padding-bottom: 100px;
     z-index:800;
 }
-@media (max-width: 768px){
     .navigation-container{
         display: block;
         width:100%;
@@ -27,12 +31,13 @@ main{
         bottom:0;
         z-index:9999;
         padding:1rem;
-    }
-}
-@media (min-width: 768px){
-    .navigation-container{
+    
+    @include tablet {
         display: none;
-    }
+    };
+    @include desktop {
+        display: none;
+    };
 }
 footer{
     position: relative;
