--- a/front/src/app/shared/header/header.component.scss
+++ b/front/src/app/shared/header/header.component.scss
@@ -1,29 +1,27 @@
-.header-section{
-    // background-color: white;
-    // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    // height: 100px;
-    // width: 100vw;
-    display: flex;  
+@import '../../../assets/mixin/mixins.scss';
+
+.header-section {
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
 
-
-    img{
-        margin:1rem;
+    img {
+        margin: 1rem;
         max-width: 250px;
     }
 
-
-@media (min-width: 768px){
-    .navigation-container{
-        margin-bottom: 1rem;    
-    }
-}
-@media (max-width: 768px){
-    .navigation-container{
+    .navigation-container {
         display: none;
+
+        @include tablet {
+            display: flex;
+            padding: 0.5rem;
+        }
+
+        @include desktop {
+            display: flex;
+            padding: 1rem;
+        }
     }
 }
-}
-
